--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 
 # Node
 node_modules
+node_modules L
+node_modules W
 
 # Dist & test
 test
@@ -20,6 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+.publish/
 
 # Special
 Thumbs.db
