--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
+    "stylelint": "^13.7.2",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "svg4everybody": "^2.1.9",
     "swiper": "^6.3.2"
   }
